test/unittest/error/tst.DTRACEFLT_UNKNOWN.r
The arguments are 3 1 PC 1 64
The value of arg4 = 0

-- @@stderr --
dtrace: error on enabled probe ID 3 (ID 1: dtrace:::BEGIN): invalid address ({ptr}) in action #1 at BPF pc NNN
